--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 # SEO
-title: Oğul Köseoğlu - Turkish translator, interpreter
-description: Translator and interpreter based in Turkey.
+title: Oğul Köseoğlu
+description: Translator and interpreter based in Turkey, providing services in English and Turkish.
 
 # Theme
 remote_theme: 'internet-de-france/athena'
